@@ -403,6 +403,10 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   maintenance/cleanupSpam.php
 * (bug 13211) Don't break edit buttons when Image namespace includes apostrophe
 * Fix regression with upgrades from 1.4 or below.
+* Fix regression: make dumpUploads.php work again
+* dumpUploads.php options now actually supported
+* wfRelativePath() no longer includes spurious ".." when base path is "/"
+* wfRelativePath() now returns full path for differing Windows drives
 
 
 == Parser changes in 1.12 ==
